# $Id$
2009-06-26 Benoit Grégoire <benoitg@coeus.ca>
	* Updated greek translation by bill@e-texnologia.gr and strzol@gmail.com, still needs some work.
	
2009-06-25 Benoit Grégoire <benoitg@coeus.ca>
	* Fix #559
	* Fix #574
	* Fix bug introduced in 2009-06-23 patch for signing up new users.
	
2009-06-23 Benoit Grégoire <benoitg@coeus.ca>
	* Commit another slightly modified patch contributed by Zap Sherbrooke:  Allow generating publicly accessible statistics for the various nodes.  Enabled node per node.  Note that a cron must be setup for those stats to actually be generated.

2009-06-09 Benoit Grégoire <benoitg@coeus.ca>
	* Commit slightly modified patch contributed by Zap Sherbrooke:  Allow using the multiple account feature while keeping a common userbase.  Enabled in server configuration.

2008-10-13 Robin Jones
	* fixed #498 curley brace missing in portal.php

2008-10-02 Robin Jones
	* Support for redirecting to the users original URL instead of portal

2008-09-23 Robin Jones
	* Oops, forgot to include new style sheet into the previous commit.
	* Made Login template easier to edit using CSS and added example to NetworkFusion theme pack, This closes #343 .

2008-08-31 Robin Jones
	* Created ability to have a themes setting file to define commonly asked for features.
	* Created a new "Network Theme Pack" to show off the settings file and improve the user experience.

2008-08-31 Robin Jones
	* Updated some table row elements to support Odd/Even CSS. This also closes #382

2008-08-28 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix #492

2008-08-13 Robin Jones
	* Fixed dependency change for Smarty reported by cristian@lalineapeluda.com

2008-08-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* Updated Spanish translation by jlms77@gmail.com

2008-07-13 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add new Catalan translation by Christian Lorenzo cristian@lalineapeluda.com
	* Rebuild transaltions and initial schema.

2008-06-12 Benoit Grégoire  <bock@step.polymtl.ca>